# dynafunc

./: LICENSE  README.md  pyproject.toml
dynafunc/: __init__.py  _builder.py  common.py  param.py
dynafunc/builder/: __init__.py  editor.py  util.py
dynafunc/compose/: __init__.py  executor.py  strategy.py
