[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "dynafunc"
description = "Dynamic function creation"
requires-python = ">=3.7"
license = {text = "BSD 3-Clause License"}
classifiers = [
    "Programming Language :: Python :: 3",
]

dynamic = ["version", "readme", "dependencies"]


[tool.setuptools.dynamic]
version = {attr = "dynafunc.__version__"}
readme = {file = ["README.md"]}
dependencies = {file = ["requirements.txt"]}